k8s/azure-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: support-ticketing-dev
  labels:
    app.kubernetes.io/part-of: support-ticketing
    environment: dev
